# 3D-Particle-Simulation-with-OpenGL

./: CMakeLists.txt  README.md  demo.md
config/: simulation
shaders/: bbox.frag  bbox.vert  particle.frag  particle.vert
src/: Camera.h  Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  Renderer.cpp  Renderer.h  SimulationConfig.cpp  SimulationConfig.h  camera.cpp  main.cpp
